--- a/src/styles/pages/Browse.scss
+++ b/src/styles/pages/Browse.scss
@@ -28,10 +28,9 @@ $hover-scale: 1.25;
 
     .category-filters {
       display: flex;
-      gap: 12px;
-      overflow-x: auto;
-      padding-bottom: 10px;
-      scrollbar-width: none;
+      flex-wrap: wrap;
+      gap: 10px;
+      max-width: 100%;
 
       &::-webkit-scrollbar { display: none; }
 
