--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -8,27 +8,12 @@
   align-items: center;
   justify-content: space-between;
   z-index: 1000;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+  transition: all 0.4s ease;
 
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 100%);
-
-  transition: background-color 0.4s ease-in-out;
-
-  a {
-    text-decoration: none;
-    color: #e5e5e5;
-    font-size: 0.95rem;
-    font-weight: 500;
-    margin-right: 1.5rem;
-    transition: color 0.25s ease;
-
-    &:hover {
-      color: #ffffff;
-    }
+  &.nav-black {
+    background: #141414;
   }
-}
-
-.nav-black {
-  background-color: #141414;
 }
 
 .nav-left {
@@ -39,20 +24,50 @@
     font-size: 1.4rem;
     font-weight: 800;
     color: #e50914;
-    letter-spacing: 1px;
-    margin-right: 2.5rem;
+    text-decoration: none;
+    margin-right: 2rem;
+  }
 
-    &:hover {
-      color: #f40612;
+  .nav-links {
+    display: flex;
+    gap: 1.5rem;
+
+    a {
+      text-decoration: none;
+      color: #e5e5e5;
+      font-size: 0.9rem;
+      transition: color 0.3s;
+      &:hover { color: #fff; }
     }
   }
 }
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  margin-right: 1.5rem;
 
+  .bar {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    transition: 0.3s;
+  }
+}
 .nav-search-container {
   display: flex;
   align-items: center;
 }
-
+.desktop-search-container {
+  display: flex;
+  align-items: center;
+}
+.mobile-search-wrapper {
+  display: none;
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
 .nav-search-input {
   width: 300px;
   height: 34px;
@@ -77,20 +92,38 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .navbar {
-    padding: 0 1.5rem;
+    padding: 0 1rem;
+  }
+  .menu-toggle {
+    display: flex;
   }
 
-  .nav-left a:not(.logo) {
-    display: none;
+  .nav-links {
+    position: absolute;
+    top: 68px;
+    left: -100%;
+    flex-direction: column;
+    background-color: #141414;
+    width: 100%;
+    height: calc(100vh - 68px);
+    padding: 2rem;
+    transition: 0.4s ease;
+    gap: 2rem;
+
+    &.open {
+      left: 0;
+    }
+
+    a {
+      font-size: 1.5rem;
+      width: 100%;
+    }
   }
 
   .nav-search-input {
-    width: 160px;
-
-    &:focus {
-      width: 200px;
-    }
+    width: 300px;
+    &:focus { width: 340px; }
   }
 }
